--- a/invessence/modules/showcase/src/main/webapp/a1.xhtml
+++ b/invessence/modules/showcase/src/main/webapp/a1.xhtml
@@ -48,7 +48,7 @@
                 </p:column>
                 <p:column >
                     <p:spinner id="age" value="#{cepb.defaultAge}"
-                            min="1" max="100" stepFactor="1" size="3"
+                            min="1" max="100" stepFactor="1"
                             styleClass="width: 90px"
                             required="true" requiredMessage="Age should be of between 1 to 100."/>
                 </p:column>
@@ -56,13 +56,13 @@
 
             <p:row>
                 <p:column styleClass="invLabel">
-                    <p:outputLabel value="#{cepb.horizonQuestion}"/>
+                    <p:outputLabel value="How long do you plan to invest?"/>
                 </p:column>
                 <p:column style="width:25px">
                 </p:column>
                 <p:column >
                     <p:spinner id="horizon" value="#{cepb.defaultHorizon}"
-                               min="1" max="100" stepFactor="1" size="3"
+                               min="1" max="100" stepFactor="1"
                                styleClass="width: 90px"
                                required="true" requiredMessage="Investment years should be of between 1 to 100."/>
                 </p:column>
