--- a/invessence/modules/web/src/main/webapp/pages/consumer/a1.xhtml
+++ b/invessence/modules/web/src/main/webapp/pages/consumer/a1.xhtml
@@ -5,96 +5,104 @@
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:pe="http://primefaces.org/ui/extensions">
 
-        <p:panelGrid id="consumergoalsgrid" styleClass="invNBgrid NBwidget">
+        <p:panelGrid id="consumergoals" StyleClass="ui-noborder">
             <p:row>
-            <p:column colspan="5">
-                <p:messages id="messages" autoUpdate="true" closable="true"/>
-            </p:column>
-            </p:row>
-            <p:row>
-                <p:column styleClass="invLabel" style="width:150px">
-                    <p:outputLabel value="Invest for"/>
+                <p:column>
+                    Invest for
                 </p:column>
-                <p:column style="text-align: left;">
-                    <p:selectOneMenu id="goal" value="#{cepb.goal}"
-                                     style="height: 26px;width:200px"
-                                     update="consumergoalsgrid" process="@this"
+                <p:column>
+                    <p:selectOneMenu id="goal"
+                                     value="#{cepb.goal}"
+                                     process="@this"
                                      required="true" requiredMessage="Select one investment goal.">
                         <f:selectItem itemLabel="- Choose one -" itemValue=""/>
+                        <f:selectItem itemLabel="Grow Wealth" itemValue="Growth"/>
                         <f:selectItem itemLabel="Generate Income" itemValue="Income"/>
-                        <f:selectItem itemLabel="Grow Wealth" itemValue="Groth"/>
                         <f:selectItem itemLabel="Safety" itemValue="Retirement"/>
+                        <p:ajax listener="#{cepb.onChange}" update=":ceForm:workArea, :ceForm:dPanel1"/>
                     </p:selectOneMenu>
                 </p:column>
-        </p:row>
-
-         <p:row>
-             <p:column styleClass="invLabel" style="width:150px">
-                 <p:outputLabel value="Account Type"/>
-             </p:column>
-             <p:column >
-                 <p:selectBooleanButton id="accountaxable" value="#{cepb.accountTaxable}" onLabel="Taxable" offLabel="Non-taxable" />
-             </p:column>
-         </p:row>
-
-            <p:row>
-                <p:column styleClass="invLabel">
-                    <p:outputLabel value="Your Current Age"/>
+                <p:column>
+                    Account Type
                 </p:column>
-                <p:column >
-                    <p:spinner id="age" value="#{cepb.defaultAge}"
-                            min="1" max="100" stepFactor="1"
-                            required="true" requiredMessage="Age should be of between 1 to 100."/>
+                <p:column>
+                    <p:selectBooleanButton id="accountaxable"
+                                           update=":ceForm:workArea, :ceForm:dPanel1"
+                                           value="#{cepb.accountTaxable}" onLabel="Taxable" offLabel="Non-taxable">
+                    <p:ajax listener="#{cepb.onChange}" update=":ceForm:workArea, :ceForm:dPanel1"/>
+                    </p:selectBooleanButton>
                 </p:column>
             </p:row>
 
             <p:row>
-                <p:column styleClass="invLabel">
-                    <p:outputLabel value="#{cepb.horizonQuestion}"/>
+                <p:column>
+                    Your Current Age
                 </p:column>
-                <p:column >
-                    <p:spinner id="horizon" value="#{cepb.defaultHorizon}"
+                <p:column>
+                    <p:spinner id="age" value="#{cepb.age}"
+                               update=":ceForm:workArea, :ceForm:dPanel1"
                                min="1" max="100" stepFactor="1"
-                               required="true" requiredMessage="Investment years should be of between 1 to 100."/>
+                               required="true" requiredMessage="Age should be of between 1 to 100.">
+                        <p:ajax listener="#{cepb.onChange}" update=":ceForm:workArea, :ceForm:dPanel1"/>
+                    </p:spinner>
+                </p:column>
+                <p:column>
+                    #{cepb.horizonQuestion}
+                </p:column>
+                <p:column>
+                    <p:spinner id="horizon" value="#{cepb.horizon}"
+                               min="1" max="100" stepFactor="1"
+                               required="true" requiredMessage="Investment years should be of between 1 to 100.">
+                        <p:ajax listener="#{cepb.onChange}" update=":ceForm:workArea, :ceForm:dPanel1"/>
+                    </p:spinner>
                 </p:column>
             </p:row>
 
-            <p:row >
-                <p:column styleClass="invLabel">
-                    <p:outputLabel value="Initial Investment"/>
+
+            <p:row>
+                <p:column>
+                    Initial Investment
                 </p:column>
-                <p:column >
-                    <pe:inputNumber id="initialInvestment" value="#{cepb.defaultInvestment}"
+                <p:column>
+                    <pe:inputNumber id="initialInvestment"
+                                    update=":ceForm:workArea, :ceForm:dPanel1"
+                                    value="#{cepb.initialInvestment}"
                                     required="true"
                                     maxlength="15" decimalPlaces="0" symbol="$"
                                     requiredMessage="Investment should be greater then $5,000.">
+                        <p:ajax listener="#{cepb.onChange}" update=":ceForm:workArea, :ceForm:dPanel1"/>
                     </pe:inputNumber>
                 </p:column>
-            </p:row>
-
-            <p:row>
-                <p:column styleClass="invLabel">
-                    <p:outputLabel value="Recurring Deposits (per year)"/>
+                <p:column>
+                    Recurring Deposits (per year)
                 </p:column>
-                <p:column >
-                    <pe:inputNumber id="recurringinvestment" value="#{cepb.recurringInvestment}"
+                <p:column>
+                    <pe:inputNumber id="recurringinvestment"
+                                    value="#{cepb.recurringInvestment}"
                                     maxlength="15" decimalPlaces="0" symbol="$">
+                        <p:ajax listener="#{cepb.onChange}"/>
                     </pe:inputNumber>
+
                 </p:column>
             </p:row>
 
             <p:row>
-                <p:column styleClass="invLabel">
-                    <p:outputLabel value="Investment Experience"/>
+                <p:column>
+                    Investment Experience
                 </p:column>
-                <p:column >
-                    <p:selectOneRadio id="experience" value="#{cepb.experience}"
-                                      required="true"  requiredMessage="Investment experience.">
-                        <f:selectItem itemLabel="Experienced" itemValue="1"/>
-                        <f:selectItem itemLabel="Inexperienced" itemValue="2"/>
-                    </p:selectOneRadio>
+                <p:column colspan="3">
+                    <p:selectOneButton value="#{cepb.experience}">
+                        <f:selectItem itemLabel="None" itemValue="0" />
+                        <f:selectItem itemLabel="1-3" itemValue="2" />
+                        <f:selectItem itemLabel="3-5" itemValue="4" />
+                        <f:selectItem itemLabel="5-10" itemValue="8" />
+                        <f:selectItem itemLabel="10+" itemValue="20" />
+                        <p:ajax listener="#{cepb.onChange}" update=":ceForm:workArea, :ceForm:dPanel1"/>
+                    </p:selectOneButton>
+
                 </p:column>
-           </p:row>
+            </p:row>
+
         </p:panelGrid>
 
 </ui:composition>
